<resources>
    <string name="app_name">SahaySathi</string>

    <!--login strings-->
    <string name="login">Welcome Back</string>
    <string name="login_msg">Welcome Back,\n Great To See You Again!</string>
    <string name="login_button">Login</string>
    <string name="login_forget_password">forget Password?</string>
    <string name="login_new_account">New User? Sign Up</string>


    <!--splash screen-->
    <string name="splash_title">Connecting Hearts For \n The Social Change</string>
    <string name="splash_loading">Loading</string>




    <!--signup strings-->
    <string name="signup">Create Your Account</string>
    <string name="signup_msg">Get Started With the exciting journey!</string>
    <string name="already_account">Already Have An Account?</string>
    <string name="signup_button">Register</string>
    <string name="ngo_button">Sign Up As Ngo</string>
    <string name="volunteer_button">Sign Up As Volunteer</string>
    <!--forget password fields-->
    <string name="forget">Forget Password?</string>
    <string name="forget_msg">Forgot Password?\nDon\'t Worry, Make A New one Here!</string>
    <string name="forget_button">Reset Password</string>

    <!-- main page/dashboard-->
    <string name="main_Title">Welcome User!</string>
    <string name="main_msg">Welcome to the volunteer panel,\n Here you can perform the intended task regarding the event management in your college.</string>

    <!--home fragment    -->
    <string name="home_title">Welcome User 👋</string>
    <string name="home_msg">Ready to make a difference today?</string>
    <string name="btn_requestHelp">Request Help</string>
    <string name="btn_offerHelp">Offer Help</string>
    <string name="home_stats_title">Impact Statistics</string>
    <string name="home_request_count">0\nRequests</string>
    <string name="home_volunteer_count">0\nVolunteers"</string>
    <string name="home_ngo_count">0\nNGOs</string>

    <!--    post request fragment-->
    <string name="pr_event_title">Event Details</string>
    <string name="pr_event_name">Event Name</string>
    <string name="pr_event_description">Event Description</string>
    <string name="pr_location_title">Location &amp; Time</string>
    <string name="pr_location_name">Event Location</string>
    <string name="pr_location_date">Select Date</string>
    <string name="pr_location_time">Select Time</string>
    <string name="pr_volunteer_title">Volunteer Requirements</string>
    <string name="pr_volunteer_count">Number of Volunteers</string>
    <string name="pr_volunteer_experience">Required Experience</string>
    <string name="pr_media_title">Event Images</string>
    <string name="pr_deadline_title">Submission Deadline</string>
    <string name="pr_deadline">Submission deadline</string>
    <string name="pr_submit_button">Post Volunteer Request</string>


    <!--    manage request fragment-->
    <string name="mr_no_data_title">Uh! oh, No requests found!!</string>
    <string name="mr_event_title">Event Details</string>
    <string name="mr_event_name">Event Name</string>
    <string name="mr_location_name">Location</string>
    <string name="mr_location_date">Date</string>
    <string name="mr_applied_count">Applied: 0</string>
    <string name="mr_selected_count">Selected: 0</string>



    <!--Common fields-->
    <string name="username">Name</string>
    <string name="contact">Contact</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">your user name</string>
    <string name="nav_header_subtitle">your email id</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="location">Location</string>

    <!--settings fragement    -->
    <string name="setting_profile_name">Welcome User 👋</string>
    <string name="setting_profile_email">Email:user@gmail.com</string>
    <string name="setting_switch_mode">Dark Mode</string>
    <string name="setting_user_preference">User Preferences</string>
    <string name="setting_switch_notifications">Enable Notifications</string>
    <string name="setting_btnLogout">Logout</string>

    <!-- profile fragment-->
    <string name="ngo_organization_title">Individual Information</string>
    <string name="ngo_organization_name">Name</string>
    <string name="ngo_organization_reg_no">Registration/contact Number</string>
    <string name="ngo_organization_address">Address</string>
    <string name="ngo_organization_update_btn">Update</string>
    <string name="ngo_contact_title">Contact Information</string>
    <string name="ngo_contact_phone">Phone</string>
    <string name="ngo_contact_email">Email</string>
    <string name="ngo_contact_update_btn">Update</string>

    <!-- ngo applicants fragment   -->
    <string name="applicant_name">Name</string>
    <string name="applicant_city">City</string>
    <string name="applicant_skill">Skill</string>
    <string name="applicant_email">Email</string>
    <string name="applicant_phone">Phone</string>
    <string name="applicant_experience">Experience</string>
    <string name="applicant_accept_button">Accept</string>
    <string name="applicant_reject_button">Reject</string>
    <string name="applicant_no_data_title">Uh! oh, No applicants found!!</string>


    <!--menu of volunteer    -->
    <string name="menu_volunteer_home">Home</string>
    <string name="menu_volunteer_browseRequest">Browse Request</string>
    <string name="menu_volunteer_profile">Update Profile</string>
    <string name="menu_volunteer_logout">Settings</string>
    <string name="menu_volunteer_myTasks">My Tasks</string>
    <string name="menu_volunteer_notifications">Notifications</string>


    <!--menu of ngo-->
    <string name="menu_ngo_home">Home</string>
    <string name="menu_ngo_profile">Update Profile</string>
    <string name="menu_ngo_logout">Settings</string>
    <string name="menu_ngo_postRequest">Post Request</string>
    <string name="menu_ngo_manageRequests">Manage Requests</string>
    <string name="menu_ngo_applicants">Applicants</string>
    <string name="noEventText">No events found</string>
    <string name="editSearchEvent">Search by city or event</string>
    <string name="mr_event_status">Status</string>
    <string name="mr_tasks_instructions">instructions</string>
    <string name="mr_tasks_qr">Click To See the QRCode -></string>
    <string name="ngo_experience">Enter Volunteer Experience(Yrs.) If Any.</string>

</resources>