<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_8sdp"
    app:cardElevation="6dp"
    android:background="@color/blue"
    app:cardCornerRadius="12dp">

    <LinearLayout
        android:orientation="vertical"
        android:padding="15dp"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Event Title -->
        <TextView
            android:id="@+id/tvTasksTitle"
            android:text="@string/mr_event_name"
            android:layout_margin="@dimen/_5sdp"
            android:textColor="@color/new_red"
            android:textStyle="bold"
            android:textSize="@dimen/_20sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <!-- Location -->
        <TextView
            android:id="@+id/tvTasksCity"
            android:text="@string/mr_location_name"
            android:layout_margin="@dimen/_5sdp"
            android:textColor="@color/blue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tvTasksInstructions"
            android:text="@string/mr_tasks_instructions"
            android:layout_margin="@dimen/_5sdp"
            android:textColor="@color/blue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:text="@string/mr_tasks_qr"
            android:textColor="@color/blue"
            android:layout_width="wrap_content"
            android:layout_margin="@dimen/_5sdp"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>