<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardElevation="6dp"
    android:background="@color/blue"
    app:cardCornerRadius="12dp">

    <LinearLayout
        android:orientation="vertical"
        android:padding="15dp"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Event Title -->
        <TextView
            android:id="@+id/tvEventName"
            android:text="@string/mr_event_name"
            android:textColor="@color/new_red"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tvEventCity"
            android:text="@string/mr_location_name"
            android:textColor="@color/blue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tvEventStatus"
            android:text="@string/mr_event_status"
            android:textColor="@color/black"
            android:layout_gravity="end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


    </LinearLayout>

</androidx.cardview.widget.CardView>