<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardElevation="6dp"
    app:cardCornerRadius="12dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:background="@color/white"
        android:orientation="vertical">

        <TextView
            android:id="@+id/applicantName"
            android:text="@string/applicant_name"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/new_red"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/applicantCity"
            android:text="@string/applicant_city"
            android:textColor="@color/blue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/applicantSkill"
            android:text="@string/applicant_skill"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:textColor="@color/blue"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/applicantEventName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/blue"
            android:text="Event Name"/>

        <TextView
            android:id="@+id/applicantEventStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/blue"
            android:text="Status"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>